# desktop-app

./: .gitignore  README.md  ad.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: accounts.rs  auth.rs  backup.rs  bookmarks.rs  fetch.rs  media.rs  mod.rs  notes.rs  reports.rs  search.rs  settings.rs  tags.rs  updater.rs  workspace.rs
src-tauri/src/crypto/: aes.rs  kdf.rs  mnemonic.rs  mod.rs
src-tauri/src/db/: connection.rs  migrations.rs
src-tauri/src/models/: account.rs  bookmark.rs  media.rs  mod.rs  note.rs  report.rs  tag.rs  workspace.rs
src/components/: MarkdownEditor.vue  TagInput.vue
src/components/common/: GroupTree.vue  PasswordGenerator.vue  SearchBar.vue  TagInput.vue
src/components/layout/: AppHeader.vue  AppSidebar.vue
src/composables/: useAutoLock.ts  useDatabase.ts  useSearch.ts
src/i18n/: index.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
src/lib/: hljs.ts  markdown.ts
src/router/: index.ts
src/stores/: auth.ts  workspace.ts
src/styles/: hljs-theme.css
src/types/: index.ts
src/views/: LockScreen.vue  WorkspaceHome.vue  WorkspaceLayout.vue  WorkspaceSelector.vue
src/views/accounts/: AccountDetail.vue  AccountList.vue
src/views/bookmarks/: BookmarkDetail.vue  BookmarkList.vue
src/views/media/: MediaList.vue
src/views/notes/: NoteDetail.vue  (+2 more)
(+5 files in other folders)
