[package]
name = "vaultkeeper"
version = "1.0.4"
description = "A privacy-focused, offline-first personal vault application for managing accounts, bookmarks, notes, and media — all encrypted locally on your device."
authors = ["VaultKeeper", "AI-Star-Dev", "辰星"]
edition = "2024"

[lib]
name = "vaultkeeper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
zip = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
